tests/expectations/compiler/constructor/two_constructors_fail.out
Error [EPAR0370046]: A program can only have one constructor.
    --> compiler-test:12:5
     |
  12 |     async constructor() {
     |     ^^^^^
